Fix button overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,6 @@ footer {
 }
 
 #click-element {
-  position: absolute;
+  position: relative;
 }
 
